updated packages, removed auctex

--- a/relatorio/relatorio.org
+++ b/relatorio/relatorio.org
@@ -11,24 +11,63 @@ Baseado em princípios de test-driven-development (TDD), eu decidi primeiro cria
 os testes de cada função a ser executada pela CPU (fetch, decode, add, load,
 etc). Como o enunciado não especificava, fiz algumas considerações sobre o tamanho de cada um dos components:
 - memória: 12 bits (4096 endereços)
-- contador de instruções (PC): 16 bits
-- acumulador: 16 bits
-O motivo para a escolha da memória com 12 bits é devido ao tamanho do operando.
-Como cada instrução tem comprimento de 16 bits, sendo os 4 primeiros usados para
-definir o opcode, foi natural escolher 12 para endereças a memória. A mesma
-lógica se aplica ao acumulador; como existem instruções que podem carregar
-valores de até 12 bits nele (LV/load value por exemplo), usei 16 bits. Tive que
-divergir um pouco da implementação usada nos slides da aula 9, mais
-especificamente na instrução MV/move to memory, pois ela originalmente apenas
-poderia guardar 8 bits. Para guardar os 16 bits, decidi então alterar ela para
-que o endereço indicado pelo operando guarde o byte mais significativo do
-acumulador, e o endereço seguinte guarde o menos significativo. Para manter
-compatibilidade com a função LM/load from memory, também a alterei para que ela
-puxe 16 bits.
+- contador de instruções (PC): 12 bits
+- acumulador: 8 bits
+O motivo para a escolha da memória com 12 bits é devido ao tamanho do operando. A única operação de OS call implementada até o momento é a de argumento 0, que realiza a saída do programa.
 ** Loader
-Comparativamente aos outros componentes, o loader é bem simples por se tratar de um loader absoluto. Caso tivessémos que implementar um linker/relocador, certamente seria muito mais complicado. No momento, estou usando apenas uma função que lê valores binários e guarda dados do tipo Byte na memória virtual.
+O loader foi escrito em assembly, e possui 59 bytes. GOAL_ONE e GOAL_TWO são as variáveis que guardam o MSB e LSB do endereço do programa a ser carregado. Ao final do procedimento de load, o loader automaticamente move o Program Counter para o endereço inicial do programa carregado.
+#+BEGIN_SRC
+@   0
+START
+            GD  0
+            MM GOAL_ONE
+            +   NINETY
+            MM  FIRST_BYTE
+            GD  0
+            MM GOAL_TWO
+            MM  SECOND_BYTE
+            GD  0
+            MM  LENGTH
+REPEAT
+            GD  0
+            JP  FIRST_BYTE
+RETURN
+            LD  SECOND_BYTE
+            +   ONE
+            MM  SECOND_BYTE
+            JZ  CARRY
+CHECK_IF_DONE
+            LD  LENGTH
+            -   ONE
+            MM  LENGTH
+            JZ  FINISH
+            JP  REPEAT
+CARRY
+            LD  FIRST_BYTE
+            +   ONE
+            MM  FIRST_BYTE
+            +   ONE
+            JP  CHECK_IF_DONE
+
+FIRST_BYTE   K  00 ;test
+SECOND_BYTE  K  00
+            JP RETURN
+LENGTH       K  00
+ONE          K  01
+NINETY       K  /90
+FINISH
+GOAL_ONE     K 0
+GOAL_TWO     K 0
+#  START
+ #+END_SRC
 ** Assembler
-Assemblers são programas que convertem mnemônicos assembly (ASM) para código de máquina. Podem ser de um ou dois passos. Assemblers de dois passos primeiro precisam gerar uma tabela de símbolos para depois conseguir traduzir à código de máquina, enquanto que assembler de um passo fazem o processo de coletar referências ainda não resolvidas, símbolos, e a montagem tudo ao mesmo tempo.
+Assemblers são programas que convertem mnemônicos assembly (ASM) para código de
+máquina. Podem ser de um ou dois passos. Assemblers de dois passos primeiro
+precisam gerar uma tabela de símbolos para depois conseguir traduzir à código de
+máquina, enquanto que assembler de um passo fazem o processo de coletar
+referências ainda não resolvidas, símbolos, e a montagem tudo ao mesmo tempo.
+
+Nesse projeto, para a primeira entrega, o assembler não trata de casos em que existem mais de uma psudo instrução de start (@). Outra restrição é que, quando usar diretivas (como START/CARRY no exemplo do loader), é necessário que elas estejam em linhas separadas de comandos.
 
 * Uso
 Requisitos mínimos:
@@ -47,8 +86,10 @@ Requisitos mínimos:
 ** Testes
 Usando a biblioteca pytest e hypothesis, cada um das minhas funções recebem ao
 menos 200 inputs aleatórios, o que ajuda a garantir que o código funciona como
-esperado. Para iniciar uma sessão de testes, basta executar o comando =pytest= na raiz do diretório onde o código foi baixado.
+esperado. Para iniciar uma sessão de testes, basta executar o comando =pytest=
+na raiz do diretório onde o código foi baixado.
 ** Uso normal
 *** TODO fix this part
 Para uso convencional, basta executar o comando
 =python3 src/vm.py=
+A VM irá procurar o arquivo assembly.txt dentro da pasta ./src/data/ e fará a montagem e também a execução.
